# learn_code

./: .gitignore  readme.md
freecodecamp/relational database/: pyproject.toml  readme.md
freecodecamp/relational database/01 learn bash by building a boilerplate/: readme.md
freecodecamp/relational database/02 learn relational databases by building a mario database/: readme.md
freecodecamp/relational database/03 project celestial bodies database/: readme.md  tutorial.md  universe.sql
freecodecamp/relational database/04 learn bash scripting by building five programs/: bingo.sh  countdown.sh  five.sh  fortune.sh  questionnare.sh  readme.md
freecodecamp/relational database/05 learn SQL by building a student database: p1/: insert_data.sh  readme.md
freecodecamp/relational database/06 learn SQL by building a student database: p2/: readme.md  student_info.sh
freecodecamp/relational database/07 project world cup database/: insert_data.py  insert_data.sh  queries.sh  readme.md  worldcup.sql
freecodecamp/relational database/08 learn advanced bash by building a kitty ipsum translator/: readme.md  script.sh  translate.sh
python_learning/: .gitignore  Comprehensive Python Cheatsheet.md  pyproject.toml  readme.md
python_learning/100_days_of_code/: readme.md
python_learning/100_days_of_code/23 Turtle Crossing capstone project/: readme.md
python_learning/automation and scripts/: readme.md
python_learning/chatGPT/: main.py  readme.md
python_learning/code exercise/: Opposites attract.py  Regex validate PIN code.py  Reverse words.py  count_characters.py  mario.py
(+321 files in other folders)
