[tool.poetry]
name = "python-learning"
version = "0.1.0"
description = ""
authors = ["MorphZG <zoran1607@gmail.com>"]
readme = "README.md"
packages = [{include = "python_learning"}]

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.1.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
rich = "^13.5.2"
textual = "^0.37.1"
psycopg = "^3.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
